# realtime-virtual-triage

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  agents.py  config.py  gpt4o_client.py  intake_graph.py  main.py  models.py  routes.py  session_store.py
backend/app/data/: physicians.json
backend/app/utils/: clinical_guidance.py  referral_builder.py  triage_prompt.py
docs/: intake-agent.md
frontend/: .eslintrc.cjs  README.md  index.html  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  store.ts  webrtc.ts
frontend/src/components/: IntakeForm.css  IntakeForm.tsx  TranscriptDisplay.css  TranscriptDisplay.tsx
